# TES

./: .gitmodules  CMakeLists.txt  main_gateway.cpp
3rd/gateway/: CMakeLists.txt
3rd/gateway/config/: system_config.json.bak  system_config_ed25519.json.bak  system_config_live.json  system_config_testnet.json.bak
3rd/gateway/include/: binance_websocket.h  config_manager.h  data_structures.h  exchange_interface.h
3rd/gateway/scripts/: build.sh
3rd/gateway/src/: binance_websocket.cpp  config_manager.cpp  main.cpp
3rd/gateway/test_build/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  test_api_key  test_api_key.cpp  yyjson.pc
3rd/gateway/test_build/ixwebsocket_build/: Makefile  cmake_install.cmake
3rd/gateway/test_build/yyjson_build/: Makefile  cmake_install.cmake
3rd/libgcrypt/: ChangeLog  Makefile  config.h  config.h.in  config.status  configure  libtool
3rd/libgcrypt/cipher/: Makefile  Makefile.in  arcfour-amd64.lo  aria-aesni-avx-amd64.lo  aria-aesni-avx2-amd64.lo  aria-gfni-avx512-amd64.lo  aria.lo  blake2b-amd64-avx2.lo  blake2b-amd64-avx512.lo  blake2s-amd64-avx.lo  blake2s-amd64-avx512.lo  camellia-gfni-avx2-amd64.lo  camellia-gfni-avx512-amd64.lo  camellia-vaes-avx2-amd64.lo  chacha20-amd64-avx2.lo  chacha20-amd64-avx512.lo  chacha20-amd64-ssse3.lo  crc-intel-pclmul.lo  des-amd64.lo  gost-s-box  keccak-amd64-avx512.lo  kem-ecc.lo  kem.lo  kyber.lo  mceliece6688128f.lo  poly1305-amd64-avx512.lo  rijndael-aesni.lo  rijndael-padlock.lo  rijndael-ssse3-amd64-asm.lo  rijndael-ssse3-amd64.lo  rijndael-vaes-avx2-amd64.lo  rijndael-vaes.lo  serpent-avx512-x86.lo  sha1-avx-amd64.lo  sha1-avx-bmi2-amd64.lo  sha1-avx2-bmi2-amd64.lo  sha1-intel-shaext.lo  sha256-avx-amd64.lo  sha256-avx2-bmi2-amd64.lo  sha256-intel-shaext.lo  (+9 more)
3rd/libgcrypt/compat/: Makefile  Makefile.in
3rd/libgcrypt/doc/: Makefile  hmac256.1  version.texi  yat2m
3rd/libgcrypt/lib/: libgcrypt.la
3rd/libgcrypt/m4/: Makefile
3rd/libgcrypt/mpi/: Makefile  Makefile.in  asm-syntax.h  mpih-pow.lo
3rd/libgcrypt/random/: Makefile  Makefile.in
3rd/libgcrypt/src/: Makefile  Makefile.in  dumpsexp  hmac256  libgcrypt-config  libgcrypt.la  libgcrypt_la-const-time.lo  mpicalc  versioninfo.rc
3rd/libgcrypt/tests/: Makefile  Makefile.in  aeswrap  bench-slope  benchmark  curves  dsa-rfc6979  fips186-dsa  fipsdrv  gchash  genhashdata  hashtest  hashtest-256g  hashtest-6g  hmac  keygen  keygrip  mpitests  pkcs1v2  prime  pubkey  random  rsacvt  t-convert  t-cv25519  t-dsa  t-ecdsa  t-ed25519  t-ed448  t-fips-service-ind  t-kdf  t-kem  t-lock  t-mlkem  t-mpi-bit  t-mpi-point  t-rsa-15  t-rsa-pss  t-rsa-testparm  t-secmem  (+5 more)
3rd/libgpg-error/: ChangeLog  Makefile  Makefile.in  config.h  config.h.in  config.status  configure  libtool
3rd/libgpg-error/doc/: Makefile  Makefile.in  errorref.txt.x  gpg-error-config.1  gpgrt-config.1  gpgrt.info  stamp-vti  yat2m
3rd/libgpg-error/include/: gpg-error.h
3rd/libgpg-error/lang/: Makefile  Makefile.in
3rd/libgpg-error/lib/: libgpg-error.la
3rd/libgpg-error/m4/: Makefile  Makefile.in
3rd/libgpg-error/po/: Makefile  Makefile.in
3rd/libgpg-error/src/: Makefile  Makefile.in  err-codes-sym.h  err-sources-sym.h  gen-posix-lock-obj  gpg-error  gpg-error-config  gpg-error-config-test.sh  gpg-error.def  gpg-error.pc  gpg-error.w32-manifest  gpgrt-config  libgpg-error.la  libgpg_error_la-argparse.lo  libgpg_error_la-b64dec.lo  libgpg_error_la-b64enc.lo  libgpg_error_la-code-from-errno.lo  libgpg_error_la-code-to-errno.lo  libgpg_error_la-estream-printf.lo  libgpg_error_la-estream.lo  libgpg_error_la-init.lo  libgpg_error_la-logging.lo  libgpg_error_la-name-value.lo  libgpg_error_la-posix-lock.lo  libgpg_error_la-posix-thread.lo  libgpg_error_la-spawn-posix.lo  libgpg_error_la-strerror.lo  libgpg_error_la-stringutils.lo  libgpg_error_la-strlist.lo  libgpg_error_la-strsource.lo  libgpg_error_la-syscall-clamp.lo  libgpg_error_la-sysutils.lo  libgpg_error_la-version.lo  libgpg_error_la-visibility.lo  mkheader  versioninfo.rc
config/: config.json  ed25519_private_key.pem  exchange_info.json  futures Websocket行情推送.txt  futures Websocket账户信息推送.txt  pos_update.json  spot Websocket行情推送.txt  system_config.json  system_config.txt  wss.txt  通用枚举定义.txt
crypto/: CMakeLists.txt  crypto.hpp  crypto_modified.hpp  encode_orgi.cpp  final_comparison_results.txt  main.cpp  modification_results.txt  test_binance_uppercase.cpp  test_comparison.cpp  test_final_comparison.cpp  test_modified_crypto.cpp  test_original_blowfish.cpp  test_original_crypto.cpp  test_simple_comparison.cpp
include/common/: common_types.h
include/execution/: async_callback_manager.h  binance_account_websocket.h  config_manager.h  execution_controller.h  gateway_adapter.h  json_feedback_writer.h  lockfree_queue.h  order_manager.h  order_state_machine.h  performance_monitor.h  position_manager.h  position_subscription_manager.h  shared_memory_interface.h  shared_memory_interface_legacy.h  signal_transmission_manager.h  thread_pool.h  trading_rule_checker.h  twap_algorithm.h  types.h
include/utils/: websocket_client.h
keys/: ed25519_public_key.pem
results/: feedback_20251024_144632_255_0.json  feedback_20251024_150936_320_0.json  feedback_20251027_144650_278_0.json  feedback_20251027_150421_402_0.json  feedback_20251027_150458_21_0.json
src/execution/: CMakeLists.txt  async_callback_manager.cpp  binance_account_websocket.cpp  config_manager.cpp  execution_controller.cpp  gateway_adapter.cpp  json_feedback_writer.cpp  order_manager.cpp  order_state_machine.cpp  performance_monitor.cpp  position_manager.cpp  position_subscription_manager.cpp  signal_transmission_manager.cpp  thread_pool.cpp  trading_rule_checker.cpp  twap_algorithm.cpp
src/shared_memory/: CMakeLists.txt  Makefile  cmake_install.cmake  control_info.cpp  heartbeat_monitor.cpp  memory_manager.cpp  order_feedback_buffer.cpp  order_report_buffer.cpp  sequence_manager.cpp  signal_buffer.cpp  state_sync.cpp
src/utils/: CMakeLists.txt  Makefile  cmake_install.cmake  websocket_client.cpp
(+294 files in other folders)
